feat: Update embedding models and permissions in various configurations

--- a/docker/.env
+++ b/docker/.env
@@ -100,7 +100,7 @@ RAGFLOW_IMAGE=infiniflow/ragflow:v0.20.0-slim
 # RAGFLOW_IMAGE=infiniflow/ragflow:v0.20.0
 #
 # The Docker image of the v0.20.0 edition includes built-in embedding models:
-#   - BAAI/bge-large-zh-v1.5
+#   - Alibaba-NLP/gte-multilingual-base
 #   - maidalun1020/bce-embedding-base_v1
 #
 
