--- a/pyproject.toml
+++ b/pyproject.toml
@@ -128,6 +128,8 @@ dependencies = [
     "opensearch-py==2.7.1",
     "pluginlib==0.9.4",
     "click>=8.1.8",
+    "paddle2onnx>=2.0.1",
+    "paddlepaddle>=3.1.1",
 ]
 
 [project.optional-dependencies]
