Add HVAC terminology and build script for Japanese token dictionaries - Created a new file `huqie_ja_hvac.txt` containing HVAC-related terms in Japanese with their English translations and associated tags. - Implemented `build_huqie_jp.py` script to download, process, and generate Japanese token dictionaries, including HVAC terms. - The script supports caching, aggregation, and allows for skipping general dictionary generation.

--- a/.gitignore
+++ b/.gitignore
@@ -29,7 +29,9 @@ Cargo.lock
 docker/ragflow-logs/
 /flask_session
 /logs
-rag/res/deepdoc
+rag/res/deepdoc/*
+!rag/res/deepdoc/ocr.res
+rag/res/huqie_cache/
 
 # Exclude sdk generated files
 sdk/python/ragflow.egg-info/
